tests/snapshots/render__sidebar_mode_files.snap
---
source: tests/render.rs
expression: "frame(&mut app, 120, 40)"
---
 perga
┌──────────────────────────────┐┌──────────────────────────────────────────────────────────────────────────────────────┐
│FILES search outline links    ││                                                                                      │
│31 entries                    ││                                                                                      │
│▸ .github                     ││                                                                                      │
│▸ docs                        ││                                                                                      │
│▸ spaces and #hash            ││                                                                                      │
│  anchors.md                  ││                                                                                      │
│  broken-links.md             ││                                                                                      │
│  crlf.md                     ││                                                                                      │
│  cycle-a.md                  ││                       ██████  ███████ ██████   ██████   █████                        │
│  cycle-b.md                  ││                       ██   ██ ██      ██   ██ ██       ██   ██                       │
│  empty.md                    ││                       ██████  █████   ██████  ██   ███ ███████                       │
│  frontmatter-only.md         ││                       ██      ██      ██   ██ ██    ██ ██   ██                       │
│  gfm.md                      ││                       ██      ███████ ██   ██  ██████  ██   ██                       │
│  invalid-utf8.md             ││                                                                                      │
│  no-trailing-newline.md      ││                                      perga 0.1.0                                     │
│  outside.md                  ││                                                                                      │
│  README.md                   ││                                Ctrl+O   find a document                              │
│  unicode.md                  ││                                 Ctrl+B   toggle sidebar                              │
│  wide.md                     ││                                     ?   all keybindings                              │
│  wiki.md                     ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
└──────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────┘
 READ  H/L history  f links  Ctrl+B sidebar  Ctrl+O switch  Ctrl+F find  ? help
