tests/snapshots/render__sidebar_mode_outline.snap
---
source: tests/render.rs
expression: "frame(&mut app, 120, 40)"
---
 perga
┌──────────────────────────────┐┌──────────────────────────────────────────────────────────────────────────────────────┐
│files search OUTLINE links    ││                                                                                      │
│0 headings                    ││                                                                                      │
│no document                   ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                       ██████  ███████ ██████   ██████   █████                        │
│                              ││                       ██   ██ ██      ██   ██ ██       ██   ██                       │
│                              ││                       ██████  █████   ██████  ██   ███ ███████                       │
│                              ││                       ██      ██      ██   ██ ██    ██ ██   ██                       │
│                              ││                       ██      ███████ ██   ██  ██████  ██   ██                       │
│                              ││                                                                                      │
│                              ││                                      perga #####                                     │
│                              ││                                                                                      │
│                              ││                                Ctrl+O   find a document                              │
│                              ││                                 Ctrl+B   toggle sidebar                              │
│                              ││                                     ?   all keybindings                              │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
└──────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────┘
 READ  H/L history  f links  Ctrl+B sidebar  Ctrl+O switch  Ctrl+F find  ? help
