tests/snapshots/render__sidebar_mode_search.snap
---
source: tests/render.rs
expression: "frame(&mut app, 120, 40)"
---
 perga
┌──────────────────────────────┐┌──────────────────────────────────────────────────────────────────────────────────────┐
│files SEARCH outline links    ││                                                                                      │
│no search yet                 ││                                                                                      │
│press Ctrl+G to search the vau││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                       ██████  ███████ ██████   ██████   █████                        │
│                              ││                       ██   ██ ██      ██   ██ ██       ██   ██                       │
│                              ││                       ██████  █████   ██████  ██   ███ ███████                       │
│                              ││                       ██      ██      ██   ██ ██    ██ ██   ██                       │
│                              ││                       ██      ███████ ██   ██  ██████  ██   ██                       │
│                              ││                                                                                      │
│                              ││                                      perga #####                                     │
│                              ││                                                                                      │
│                              ││                                 Tab   focus the file tree                            │
│                              ││                                Ctrl+O   find a document                              │
│                              ││                                Ctrl+B   hide the sidebar                             │
│                              ││                                     ?   all keybindings                              │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
└──────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────┘
 READ  Tab file tree  H/L history  f links  Ctrl+B hide sidebar  Ctrl+O switch  Ctrl+F find  ? help
