tests/snapshots/render__sidebar_search_populated.snap
---
source: tests/render.rs
expression: "frame(&mut app, 120, 40)"
---
 perga
┌──────────────────────────────┐┌──────────────────────────────────────────────────────────────────────────────────────┐
│files SEARCH outline links    ││                                                                                      │
│9 hits in 7 ms                ││                                                                                      │
│docs/api/auth.md              ││                                                                                      │
│    3 This service uses Bearer││                                                                                      │
│    4 walkthrough, and [[Token││                                                                                      │
│    6 ## Obtaining a token    ││                                                                                      │
│    9 curl -X POST /auth/token││                                                                                      │
│docs/api/webhooks.md          ││                                                                                      │
│    3 See [auth](auth.md#obtai││                       ██████  ███████ ██████   ██████   █████                        │
│docs/guides/Token Rotation.md ││                       ██   ██ ██      ██   ██ ██       ██   ██                       │
│    1 # Token Rotation        ││                       ██████  █████   ██████  ██   ███ ███████                       │
│wiki.md                       ││                       ██      ██      ██   ██ ██    ██ ██   ██                       │
│    3 A plain [[Token Rotation││                       ██      ███████ ██   ██  ██████  ██   ██                       │
│    5 [[docs/guides/Token Rota││                                                                                      │
│    6 [[token rotation]].     ││                                      perga #####                                     │
│                              ││                                                                                      │
│                              ││                                 Tab   focus the file tree                            │
│                              ││                                Ctrl+O   find a document                              │
│                              ││                                Ctrl+B   hide the sidebar                             │
│                              ││                                     ?   all keybindings                              │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
│                              ││                                                                                      │
└──────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────┘
 READ  Tab file tree  H/L history  f links  Ctrl+B hide sidebar  Ctrl+O switch  Ctrl+F find  ? help
