tests/snapshots/render__terminal_too_small.snap
---
source: tests/render.rs
expression: "frame(&mut app, 30, 8)"
---



      terminal too small
          need 40x10
