tests/snapshots/render__theme_dark.snap
---
source: tests/render.rs
expression: "frame(&mut app, 120, 40)"
---
 perga gfm.md                                                                                                      1/43
┌──────────────────────────────┐┌──────────────────────────────────────────────────────────────────────────────────────█
│FILES search outline links    ││# GFM features                                                                        █
│31 entries                    ││                                                                                      █
│▸ .github                     ││## A table with mixed alignment                                                       █
│▸ docs                        ││                                                                                      █
│▸ spaces and #hash            ││┌─────────────┬────────┬───────┐                                                      █
│  anchors.md                  │││ Left        │ Centre │ Right │                                                      █
│  broken-links.md             ││├─────────────┼────────┼───────┤                                                      █
│  crlf.md                     │││ a           │   b    │     c │                                                      █
│  cycle-a.md                  │││ longer cell │   x    │ 12345 │                                                      █
│  cycle-b.md                  ││└─────────────┴────────┴───────┘                                                      █
│  empty.md                    ││                                                                                      █
│  frontmatter-only.md         ││## A task list                                                                        █
│● gfm.md                      ││                                                                                      █
│  invalid-utf8.md             ││- ☑ a finished task                                                                   █
│  no-trailing-newline.md      ││- ☐ an unfinished task                                                                █
│  outside.md                  ││                                                                                      █
│  README.md                   ││## Deeply nested lists                                                                █
│  unicode.md                  ││                                                                                      █
│  wide.md                     ││- one                                                                                 █
│  wiki.md                     ││    - two                                                                             █
│                              ││        - three                                                                       █
│                              ││            - four                                                                    █
│                              ││                - five                                                                █
│                              ││                                                                                      █
│                              ││## A blockquote containing a list                                                     █
│                              ││                                                                                      █
│                              ││> Quoted text.                                                                        █
│                              ││>                                                                                     █
│                              ││> - first                                                                             █
│                              ││> - second                                                                            █
│                              ││>                                                                                     █
│                              ││> More quoted text.                                                                   █
│                              ││                                                                                      ║
│                              ││## Code blocks                                                                        ║
│                              ││                                                                                      ║
│                              ││fn main() {                                                                           ║
└──────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────║
 READ  H/L history  f links  Ctrl+B sidebar  Ctrl+O switch  Ctrl+F find  ? help
